# nts

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  docker-compose.yml  flake.nix  justfile  script.sh
.github/workflows/: create-release.yml  docker-image.yml
crates/nts/: Cargo.toml
crates/nts/src/: lib.rs  note.rs  state.rs
crates/nts_set_pwd/: Cargo.toml
crates/nts_set_pwd/src/: main.rs
docker/: .env.example  Dockerfile  docker-compose-dev.yml  docker-compose.yml  example.env
scripts/: auth.sh  check_password.sh  get.sh  new.sh  read.sh  write.sh
src/: error.rs  lib.rs  main.rs  settings.rs  state.rs  tracing_middleware.rs
