[package]
name = "nts"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
config = { version = "0.15.6", default-features = false, features = ["toml"] }
jiff = "0.1.28"
rouille = "3.6.2"
thiserror = "2.0.11"
xdg = "2.5.2"
